fix(ui): hide native codemirror scrolls on firefox

--- a/packages/ui/client/styles/main.css
+++ b/packages/ui/client/styles/main.css
@@ -130,6 +130,10 @@ html.dark {
 }
 
 /* CODEMIRROR SCROLLS */
+.CodeMirror-scroll {
+  /* hide FF native scrolls */
+  scrollbar-width: none;
+}
 .CodeMirror-scroll::-webkit-scrollbar,
 .codemirror-scrolls::-webkit-scrollbar {
   display: none;
